Made changes on the index.html

--- a/index.html
+++ b/index.html
@@ -438,9 +438,12 @@
                           <img src="./assets/images/travels.jpeg" class="card-img-top" alt="Task Management App">
                           <div class="project-overlay">
                               <div class="project-tags">
-                                  <span class="badge bg-dark">React Native</span>
-                                  <span class="badge bg-dark">Node.js</span>
-                                  <span class="badge bg-dark">MongoDB</span>
+                                  <span class="badge bg-dark">Next.js</span>
+                                  <span class="badge bg-dark">Tailwind</span>
+                                  <span class="badge bg-dark">Bootstrap</span>
+                                  <span class="badge bg-dark">Fant Icons</span>
+                                  <span class="badge bg-dark">Express</span>
+                                  <span class="badge bg-dark">Firebase</span>
                               </div>
                           </div>
                       </div>
@@ -458,7 +461,7 @@
                                       <i class="mdi mdi-open-in-new me-1"></i>Live Demo
                                   </a>
                               </div>
-                              <span class="text-muted small">2021</span>
+                              <span class="text-muted small">2025</span>
                           </div>
                       </div>
                   </div>
@@ -466,7 +469,7 @@
           </div>
           
           <!-- Additional Projects Accordion -->
-          <div class="row mt-4" data-aos="fade-up">
+           <div class="row mt-4" data-aos="fade-up">
               <div class="col-lg-8 mx-auto">
                   <div class="accordion" id="additionalProjects">
                       <div class="accordion-item border-0 shadow-sm">
@@ -616,12 +619,14 @@
                             </div>
                         </div>
                         <div class="card-body p-4">
-                            <h5 class="card-title mb-2">Enterprise Management Dashboard</h5>
+                            <h5 class="card-title mb-2">Water And Energy website</h5>
                             <p class="card-text text-muted mb-3">
-                                Comprehensive management system with real-time analytics, user management, and reporting features.
+                              <!-- give small decsription for that website Water And Energy website -->
+                               A comprehensive platform for managing water and energy resources, providing real-time analytics, user management, and reporting features.
+                              
                             </p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <a href="#" class="text-primary text-decoration-none d-flex align-items-center">
+                                <a href="https://akowaterandenergy.co.ke/" class="text-primary text-decoration-none d-flex align-items-center">
                                     View Details
                                     <i class="mdi mdi-arrow-right ms-2"></i>
                                 </a>
@@ -667,8 +672,8 @@
                             <img src="./assets/images/finance.jpeg" class="card-img-top" alt="Finance Application">
                             <div class="project-overlay">
                                 <div class="project-tags">
-                                    <span class="badge bg-dark">Vue.js</span>
-                                    <span class="badge bg-dark">Python</span>
+                                    <span class="badge bg-dark">React/Next.js</span>
+                                    <span class="badge bg-dark">PHP</span>
                                     <span class="badge bg-dark">MySQL</span>
                                 </div>
                             </div>
@@ -683,7 +688,7 @@
                                     View Details
                                     <i class="mdi mdi-arrow-right ms-2"></i>
                                 </a>
-                                <span class="text-muted small">2022</span>
+                                <span class="text-muted small">2024</span>
                             </div>
                         </div>
                     </div>
@@ -907,7 +912,7 @@
                             <div class="contact-info">
                                 <i class="mdi mdi-email text-primary mb-3" style="font-size: 2rem;"></i>
                                 <h5 class="mb-2">Email</h5>
-                                <p class="text-light mb-0">cyprian@example.com</p>
+                                <p class="text-light mb-0">cyprianmitheme2000@gmail.com</p>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -924,7 +929,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white py-5 border-top border-dark">
+    <footer class="bg-primary text-white py-5 border-top border-dark">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
@@ -942,16 +947,16 @@
                 <div class="col-lg-6">
                     <div class="d-flex justify-content-lg-end align-items-center">
                         <div class="social-links me-4">
-                            <a href="#" class="text-light me-3">
+                            <a href="https://www.linkedin.com/in/cyprian-mitheme-202696209/" class="text-light me-3">
                                 <i class="mdi mdi-linkedin"></i>
                             </a>
-                            <a href="#" class="text-light me-3">
+                            <a href="https://github.com/cyprian1ouma?tab=repositories" class="text-light me-3">
                                 <i class="mdi mdi-github"></i>
                             </a>
                             <a href="#" class="text-light me-3">
                                 <i class="mdi mdi-twitter"></i>
                             </a>
-                            <a href="#" class="text-light">
+                            <a href="cyprianmitheme2000@gmail.com" class="text-light">
                                 <i class="mdi mdi-email"></i>
                             </a>
                         </div>
