--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#skills">Technical Skills</a>
                     </li>
+
+                   <li class="nav-item">
+                        <a class="nav-link" href="#education">Education</a>
+                   </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
